# programming_languages_archive

./: README.md
assignment-3-image-rotation/: README.md
labs/Lab1_plang/: lib.inc  test.py
labs/Lab2_plang/: colon.inc  dict.asm  dict.inc  lib.asm  lib.inc  main.asm  makefile  test.py  words.inc
labs/assignment-1-io-library/: lib.inc
labs/assignment-2-dictionary/: colon.inc  dict.asm  dict.inc  lib.inc  main.asm  makefile  test.py  words.inc
labs/assignment-3-image-rotation/: Makefile  clang-tidy-checks.txt
labs/assignment-3-image-rotation/tester/: tester.cmake
labs/assignment-4-memory-allocator/: CMakeLists.txt  README.md
labs/assignment-4-memory-allocator/docs/: malloc-impl.c
labs/assignment-4-memory-allocator/src/: CMakeLists.txt  main.c  mem.c  mem_internals.h
labs/assignment-4-memory-allocator/tester/: CMakeLists.txt
labs/assignment-5-sepia-filter/: CMakeLists.txt  README.md
labs/assignment-5-sepia-filter/include/: bmp.h  common.h  dimensions.h  image.h  sepia.h
labs/assignment-5-sepia-filter/src/: image.c  main.c  sepia.c  sepia_sse.asm
labs/assignment-5-sepia-filter/test/: benchmark.c
seminars/sem1/: test
seminars/sem1/task1/: regulars
seminars/sem1/task2/: hello.asm
seminars/sem1/task3/: fixed.asm
seminars/sem1/task4/: task4.asm
seminars/sem2/task1/: print_hex.asm
seminars/sem2/task2/: lib.inc  test_string.py
seminars/sem2/task3/: task3.asm
seminars/sem2/task4/: lib.inc  test_uint.py
seminars/sem3/task1/: task1.asm
seminars/sem3/task2/: lib.inc  main.asm
seminars/sem3/task3/: lib.asm  main.asm  makefile
(+25 files in other folders)
